--- a/charts/postgresql/templates/statefulset.yaml
+++ b/charts/postgresql/templates/statefulset.yaml
@@ -601,7 +601,7 @@ spec:
         {{- range .Values.persistence.accessModes }}
           - {{ . | quote }}
         {{- end }}
-        storageClassName: local-sc-a1
+        storageClassName: local-sc-postgres
         resources:
           requests:
             storage: {{ .Values.persistence.size | quote }}
